# Competitive

./: .gitignore  README.md  snipets.json
CLionTeste/: CMakeLists.txt  generate_graph.py  linked-list.cpp  linked-list.h  main.cpp
CLionTeste/linked-list/: raw.txt  shared.txt
FirstAssig/: CMakeLists.txt  eighth.cpp  eighth.h  fifth.cpp  fifth.h  first.cpp  first.h  fourth.cpp  fourth.h  input_fourth.txt  main.cpp  main.h  second.cpp  second.h  seventh.cpp  seventh.h  sixth.cpp  sixth.h  third.cpp  third.h
Reverse_Words_CodeWars/: main.c
Travelling/: CMakeLists.txt  main.cpp  main.h
bigints/: CMakeLists.txt  main.cpp  main.h
bitwise/: .clang-format  CMakeLists.txt  main.cpp  main.h
bitwise/3NP1/: 3NP1.cpp  3NP1.h
bitwise/andtuples/: andtuples.cpp  andtuples.h
bitwise/hamming/: hamming.cpp  hamming.h
bitwise/longest/: longest.cpp  longest.h
bitwise/score/: score.cpp  score.h
bitwise/sorting/: sort.cpp  sort.h
bitwise/substring/: substring.cpp  substring.h
bobAndPallindromes/: main.cpp  output  site.cpp
container/: array.cpp  pqueue.cpp  vector.cpp
decodePerm/: CMakeLists.txt  main.cpp  main.h
fibsum-again/: main.cpp
fibsummatrix/: CMakeLists.txt  main.cpp
lazyTree/: Makefile  compile_commands.json  main.cpp
minStackCpp/: CMakeLists.txt  main.cpp
minimum-rotated/: CMakeLists.txt  main.c
minimum-stack/: CMakeLists.txt  main.c
nextIteration/: main.c
pigeonhole/: main.cpp
rotate-string/: CMakeLists.txt  main.c
second_fibsum/: CMakeLists.txt  main.cpp
superString/: CMakeLists.txt  main.cpp  main.h
two-sum/: solution.cpp
(+8 files in other folders)
